--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
    <div class="row">
-
+     {% for product in products %}
      <div class="col-lg-4">
           <img class="thumbnail" src="{% static 'images/placeholder.png' %}">
           <div class="box-element product">
@@ -14,31 +14,6 @@
                <h4 style="display: inline-block; float: right" >Birr-20</h4>
           </div>
      </div>
-
-     <div class="col-lg-4">
-          <img class="thumbnail" src="{% static 'images/placeholder.png' %}">
-          <div class="box-element product">
-               <h6><strong>Product</strong></h6>
-               <hr>
-               <button class="btn btn-outline-secondary add-btn">Add to cart
-               </button>
-               <a class="btn btn-outline-success " href="#">View</a>
-               <h4 style="display: inline-block; float: right" >Birr-20</h4>
-          </div>
-     </div>
-
-     <div class="col-lg-4">
-          <img class="thumbnail" src="{% static 'images/placeholder.png' %}">
-          <div class="box-element product">
-               <h6><strong>Product</strong></h6>
-               <hr>
-               <button class="btn btn-outline-secondary add-btn">Add to cart
-               </button>
-               <a class="btn btn-outline-success " href="#">View</a>
-               <h4 style="display: inline-block; float: right" >Birr-20</h4>
-          </div>
-     </div>
-
-
+     {% endfor %}
    </div>
 {% endblock content %}
